# CMSPatch

./: CMakeLists.txt  README.md
NtHookEngine/: CMakeLists.txt  NtHookEngine.cpp
injector/: CMakeLists.txt  injector.def  main.cpp  main.h
